--- a/exp/bloom_176b/int6.yaml
+++ b/exp/bloom_176b/int6.yaml
@@ -5,7 +5,7 @@ quant:
         bit: 6
         symmetric: False
         ch_axis: -1
-        token_quantile: 0.995
+        token_quantile: 0.985
     w_qconfig:
         quantizer: FixedFakeQuantize
         observer: MinMaxObserver
@@ -13,6 +13,8 @@ quant:
         symmetric: False
         ch_axis: 0 # perchannel 0 perlayer -1
     calibrate: 128
-    calibrate_path: /mnt/lustre/weixiuying/datasets/nlp_datasets/pile_cali
+    calibrate_path: /mnt/lustre/weixiuying.vendor/datasets/nlp_datasets/pile_cali
     is_remove_padding: True
     migrate: True
+model:
+    max_length: 512
