--- a/exp/bloomz_176b/int8.yaml
+++ b/exp/bloomz_176b/int8.yaml
@@ -1,18 +1,19 @@
 quant:
     a_qconfig:
         quantizer: FixedFakeQuantize
-        observer: AvgTokenQuantileObserver
+        observer: AvgMinMaxObserver
         bit: 8
         symmetric: True
         ch_axis: -1
-        token_quantile: 0.995
     w_qconfig:
-        quantizer: FixedFakeQuantize
+        quantizer: FixedQuantize
         observer: MinMaxObserver
         bit: 8
         symmetric: True
         ch_axis: -1 # perchannel 0 perlayer -1
     calibrate: 128
-    calibrate_path: /mnt/lustre/weixiuying/datasets/nlp_datasets/pile_cali
+    calibrate_path: /mnt/lustre/weixiuying.vendor/datasets/nlp_datasets/pile_cali
     is_remove_padding: True
     migrate: True
+model:
+    max_length: 512
